--- a/Superdoku.fxml
+++ b/Superdoku.fxml
@@ -128,7 +128,8 @@
                            </light>
                         </Lighting>
                      </effect></Separator>
-                  <Button fx:id="btnSolve" layoutX="139.0" layoutY="372.0" mnemonicParsing="false" onAction="#parseAndSolve" prefHeight="25.0" prefWidth="96.0" text="Solve!" />
+                  <Button fx:id="btnSolve" layoutX="66.0" layoutY="374.0" mnemonicParsing="false" onAction="#solveClick" prefHeight="25.0" prefWidth="96.0" text="Solve!" />
+                  <Button fx:id="btnNew" layoutX="197.0" layoutY="374.0" mnemonicParsing="false" onAction="#newPuzzleClick" prefHeight="25.0" prefWidth="96.0" text="New Puzzle" />
                </children></AnchorPane>
       </content>
     </Tab>
